fixed modal overlap with footer on smaller screens

--- a/src/pages/portfolio/modal/Modal.module.scss
+++ b/src/pages/portfolio/modal/Modal.module.scss
@@ -128,7 +128,7 @@
 @media screen and (max-width: 600px) {
   .greetingModal, .resumeModal, .cityPickerModal, .goMenuModal, .storialModal {
     top: 12rem;
-    height: 70%;
+    height: 65%;
     width: 90%;
   }
   
